--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.App h1 {
+  margin-bottom: 20px;
+  color: #02060c;
+  font-size: 30px;
+}
+
+.App textarea {
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  display: block;
+  font-size: 16px;
+  margin: 20px 0;
+  padding: 10px;
+  width: 100%;
+  max-width: 500px;
+  height: 100px;
+}
+.App textarea::placeholder{
+  color: #718096;
+}
+.App button {
+  background-color: #02060c;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px;
+  margin: 20px 10px;
+}
+
+.App button:hover {
+  opacity: 0.7;
+}
