--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,11 @@ code {
   border-radius: 5px;
   display: block;
   font-size: 16px;
-  margin: 20px 0;
+  margin: 20px 0 0;
   padding: 10px;
   width: 100%;
   max-width: 500px;
-  height: 100px;
+  height: 70px;
 }
 .App textarea::placeholder{
   color: #718096;
@@ -50,7 +50,7 @@ code {
   cursor: pointer;
   font-size: 16px;
   padding: 10px;
-  margin: 20px 10px;
+  margin: 20px 10px 0;
 }
 
 .App button:hover {
